--- a/linling-core/src/main/resources/static/index.html
+++ b/linling-core/src/main/resources/static/index.html
@@ -10,19 +10,19 @@
     <meta content="App Info Power by Linling Core" name="description">
     <meta content="Linling Core" name="author">
     <!-- Bootstrap核心CSS和JS -->
-    <link href="core/static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="core/static/js/jquery.min.js" type="text/javascript"></script>
-    <script src="core/static/js/linling.core.js" type="text/javascript"></script>
+    <link href="/linling/static/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/linling/static/js/jquery.min.js" type="text/javascript"></script>
+    <script src="/linling/static/js/linling.core.js" type="text/javascript"></script>
     <!-- 首页样式 -->
-    <link href="core/static/css/index.css" rel="stylesheet">
+    <link href="/linling/static/css/index.css" rel="stylesheet">
     <!-- 背景样式 -->
-    <script src="core/static/js/three.min.js" type="text/javascript"></script>
-    <link href="core/static/css/background.css" rel="stylesheet">
+    <script src="/linling/static/js/three.min.js" type="text/javascript"></script>
+    <link href="/linling/static/css/background.css" rel="stylesheet">
     <!-- AppInfo -->
     <script type="text/javascript">
         $(function () {
             httpGo(
-                "/core/appInfo",
+                "/linling/core/appInfo",
                 {},
                 function (data) {
                     loadAppInfo(data.data);
@@ -85,9 +85,10 @@
                     <a href="#" id="appHostUrl"><h3 class="masthead-brand" id="appName">LinlingCore</h3></a>
                     <nav>
                         <ul class="nav masthead-nav">
-                            <li class="active"><a href="#">应用信息</a></li>
+                            <li class="active"><a href="/linling/core">应用信息</a></li>
                             <li><a href="/swagger-ui/index.html" id="APIHost">API查询</a></li>
                             <li><a href="/druid/login.html" id="SQLHost">SQL监控</a></li>
+                            <li><a href="/linling/core/manage" id="CoreManage">管理后台</a></li>
                         </ul>
                     </nav>
                 </div>
