--- a/linling-core/src/main/resources/static/index.html
+++ b/linling-core/src/main/resources/static/index.html
@@ -9,10 +9,10 @@
     <title>AppInfo</title>
     <meta content="App Info Power by Linling Core" name="description">
     <meta content="Linling Core" name="author">
-    <!-- Bootstrap核心CSS和JS -->
+    <!-- Bootstrap、Jquery、Linling核心CSS和JS -->
     <link href="/linling/static/css/bootstrap.min.css" rel="stylesheet">
     <script src="/linling/static/js/jquery.min.js" type="text/javascript"></script>
-    <script src="/linling/static/js/linling.core.js" type="text/javascript"></script>
+    <script src="/linling/static/js/linling-core-tools.js" type="text/javascript"></script>
     <!-- 首页样式 -->
     <link href="/linling/static/css/index.css" rel="stylesheet">
     <!-- 背景样式 -->
@@ -21,10 +21,12 @@
     <!-- AppInfo -->
     <script type="text/javascript">
         $(function () {
+            // 获取信息
             httpGo(
                 "/linling/core/appInfo",
                 {},
                 function (data) {
+                    saveLocal(CACHE_APP_INFO, data.data);
                     loadAppInfo(data.data);
                 },
                 "GET",
@@ -88,7 +90,7 @@
                             <li class="active"><a href="/linling/core">应用信息</a></li>
                             <li><a href="/swagger-ui/index.html" id="APIHost">API查询</a></li>
                             <li><a href="/druid/login.html" id="SQLHost">SQL监控</a></li>
-                            <li><a href="/linling/core/manage" id="CoreManage">管理后台</a></li>
+                            <li><a href="/linling/manage" id="CoreManage">管理后台</a></li>
                         </ul>
                     </nav>
                 </div>
