--- a/linling-core/src/main/resources/static/login.html
+++ b/linling-core/src/main/resources/static/login.html
@@ -56,7 +56,7 @@
                     <p></p>
                     <button class="btn btn-lg btn-primary btn-block" onclick="doLogin(
                                 $('#userName').val(), $('#passWord').val(),
-                                $('#remember').is(':checked'),'/linling/manage'
+                                $('#remember').is(':checked'),'/linling/manage.html'
                                 );"
                             style="margin-top: 30px">
                         登 录
