--- a/linling-core/src/main/resources/static/index.html
+++ b/linling-core/src/main/resources/static/index.html
@@ -10,14 +10,18 @@
     <meta content="App Info Power by Linling Core" name="description">
     <meta content="Linling Core" name="author">
     <!-- Bootstrap、Jquery、Linling核心CSS和JS -->
-    <link href="/linling/static/css/bootstrap.min.css" rel="stylesheet">
-    <script src="/linling/static/js/jquery.min.js" type="text/javascript"></script>
-    <script src="/linling/static/js/linling-core-tools.js" type="text/javascript"></script>
+    <link href="/linling-static/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet">
+    <script src="/linling-static/bootstrap/3.3.7/js/bootstrap.min.js" type="text/javascript"></script>
+    <script src="/linling-static/jquery/3.5.1/jquery.min.js" type="text/javascript"></script>
+    <script src="/linling-static/linling-core/js/linling-core-tools.js" type="text/javascript"></script>
+    <!-- 适用于Surface /台式机Windows 8错误的IE10视口黑客 -->
+    <script src="/linling-static/linling-core/js/ie10-viewport-bug-workaround.js" type="text/javascript"></script>
+    <link href="/linling-static/linling-core/css/ie10-viewport-bug-workaround.css" rel="stylesheet">
     <!-- 首页样式 -->
-    <link href="/linling/static/css/index.css" rel="stylesheet">
+    <link href="/linling-static/linling-style/css/index.css" rel="stylesheet">
     <!-- 背景样式 -->
-    <script src="/linling/static/js/three.min.js" type="text/javascript"></script>
-    <link href="/linling/static/css/background.css" rel="stylesheet">
+    <link href="/linling-static/linling-core/css/background.css" rel="stylesheet">
+    <script src="/linling-static/linling-core/js/three.min.js" type="text/javascript"></script>
     <!-- AppInfo -->
     <script type="text/javascript">
         $(function () {
